--- a/guitarcase.html
+++ b/guitarcase.html
@@ -32,12 +32,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">Brandon Williams</a>
+                <a href="index.html" class="navbar-brand">Brandon Williams</a>
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav navbar-right" id="topnav">
                     <li>
-                        <a href="#Philosophy">PHILOSOPHY</a>
+                        <a href="index.html#Philosophy">PHILOSOPHY</a>
                     </li>
                     <li>
                         <a href="#Process">PROCESS</a>
@@ -62,14 +62,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-white">
-                        <h1>Lounge Chair | 2013</h1>
+                        <h1>Guitar Case | 2011</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <h3 class="font-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+                        <h3 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings.</h3>
                     </div>
                 </div>  
             </div>
@@ -80,44 +80,49 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom-25">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-full">
-                        </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/guitarbrainstorm960x540.jpg">
+                    </div>    
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/tuningstationmockup960x540.jpg">
                     </div>
                 </div>
-                <div class="row padded-bottom-25">    
+                <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
-                        <div class="filler-fourth-landscape">
-                        </div> 
+                        <img class="img-responsive" src="img/tuningstationsketch480x540.jpg">
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-half-portrait">
-                        </div>
+                        <img class="img-responsive" src="img/casepremodel480x540.jpg">
                     </div>  
                 </div>
-                <div class="row padded-bottom-25">
+                <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-half-landscape">
-                        </div>
+                        <img class="img-responsive" src="img/finalcasemodel960x540.jpg">
                     </div>
                 </div>
-                <div class="row padded-bottom-25">
+                <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
+                        <img class="img-responsive" src="img/gibsonlogocloseup960x540.jpg">
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-eighth-landscape">
-                        </div>
-                        <div class="filler-eighth-landscape">
-                        </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/foamrendering960x540.jpg">
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-fourth-portrait">
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/closeuprecessedhandle960x540.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/guitarmold960x540.jpg">
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/finalcaseproto960x540.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/tuningstationfinalproto960x540.jpg">
                     </div>
                 </div>            
             </div>
@@ -137,22 +142,20 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
+                        <span class="font-gray"><h3>A collection of recent projects from school, work, and personal passions.</h3></span>
                     </div>
                 </div>
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="shoes.html"><div class="work-image2">
-                        </div></a>
-                        <input type="button" value="Dress Shoe | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
+                        <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
+                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div>
                 </div>  
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="speaker.html"><div class="work-image3">
-                        </div></a>
+                        <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
                         <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
@@ -166,7 +169,7 @@
     <div class="outer-fit bg-blue" id="Contact">
         <div class="inner-fit-contact philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom">
+                <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-white">
                         <h1>Contact</h1>
                         <div class="outer-line-top">  
@@ -201,21 +204,12 @@
                         </div>
                     </div>
                 </form> -->
-                <div class="row">
-                    <div class="col-md-offset-4 col-md-4">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
+                <div class="row padded-bottom">
+                    <div class="col-md-offset-3 col-md-6">
+                        <h3><span class="font-light">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
                     </div>
                 </div>       
-            </div>
-            <div class="container">    
-                <div class="row bottom">
-                    <div class="col-md-12 font-gray right">
-                        <p>&copy Brandon Williams 2014</p>
-                    </div> 
-                </div>
-            </div>    
+            </div>   
         </div>
     </div> 
 
