--- a/loungechair.html
+++ b/loungechair.html
@@ -69,7 +69,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <h3 class="font-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+                        <h3 class="font-white">I have always loved furniture and had the opportunity to design a lounge chair as part of the Introduction to Industrial Design Methods course at Northwestern. I enjoyed taking my design through several steps of my process: sketching, scale models, solid modeling, and a full size proportion model.</h3>
                     </div>
                 </div>  
             </div>
@@ -80,46 +80,73 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom-25">
+                <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-full">
-                        </div>
+                        <img class="img-responsive" src="img/chairpage13.jpg">
                     </div>
                 </div>
-                <div class="row padded-bottom-25">    
+                <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
-                        <div class="filler-fourth-landscape">
-                        </div> 
+                        <img class="img-responsive" src="img/chairpage14.jpg">
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-half-portrait">
-                        </div>
+                        <img class="img-responsive" src="img/chairpage16.jpg">
                     </div>  
                 </div>
-                <div class="row padded-bottom-25">
+                <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-half-landscape">
-                        </div>
+                        <img class="img-responsive" src="img/chairpage17.jpg">
                     </div>
                 </div>
-                <div class="row padded-bottom-25">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/chairpage18.jpg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/chairpage20.jpg">
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
+                        <img class="img-responsive" src="img/chairpage21.jpg">
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-eighth-landscape">
-                        </div>
-                        <div class="filler-eighth-landscape">
-                        </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/chairpage23.jpg">
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-fourth-portrait">
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/chairpage30.jpg">
                     </div>
-                </div>            
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/chairmodel1.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/chairmodel2.jpg">
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/chairmodel3.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/chairmodel4.jpg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/Side With Plug.jpg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/Plug Closeup.jpg">
+                    </div>
+                </div>             
             </div>
         </div>
     </div>
@@ -142,17 +169,15 @@
                 </div>
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="shoes.html"><div class="work-image2">
-                        </div></a>
-                        <input type="button" value="Dress Shoe | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
+                        <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
+                        <input type="button" value="Guitar Case | 2011" class="btn btn-new" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div>
                 </div>  
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="speaker.html"><div class="work-image3">
-                        </div></a>
+                        <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
                         <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
@@ -166,7 +191,7 @@
     <div class="outer-fit bg-blue" id="Contact">
         <div class="inner-fit-contact philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom">
+                <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-white">
                         <h1>Contact</h1>
                         <div class="outer-line-top">  
@@ -201,21 +226,12 @@
                         </div>
                     </div>
                 </form> -->
-                <div class="row">
-                    <div class="col-md-offset-4 col-md-4">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
+                <div class="row padded-bottom">
+                    <div class="col-md-offset-3 col-md-6">
+                        <h3><span class="font-light">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
                     </div>
                 </div>       
-            </div>
-            <div class="container">    
-                <div class="row bottom">
-                    <div class="col-md-12 font-gray right">
-                        <p>&copy Brandon Williams 2014</p>
-                    </div> 
-                </div>
-            </div>    
+            </div>   
         </div>
     </div> 
 
