--- a/speaker.html
+++ b/speaker.html
@@ -69,7 +69,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <h3 class="font-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+                        <h3 class="font-white">A wireless speaker I designed as part of the Introduction to Industrial Design Methods course at Northwestern. Currently in the process of getting a prototype built.</h3>
                     </div>
                 </div>  
             </div>
@@ -80,46 +80,51 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom-25">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-full">
-                        </div>
-                    </div>
-                </div>
-                <div class="row padded-bottom-25">    
+                <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
-                        <div class="filler-fourth-landscape">
-                        </div> 
+                        <img class="img-responsive" src="img/speakerpage14.jpg">
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-half-portrait">
-                        </div>
+                        <img class="img-responsive" src="img/speakerpage16.jpg">
                     </div>  
                 </div>
-                <div class="row padded-bottom-25">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-half-landscape">
-                        </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakerpage13.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakerpage19.jpg">
+                    </div>  
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakerpage12.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakerpage10.jpg">
+                    </div>  
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakerpage20.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakerpage6.jpg">
+                    </div>  
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakermodel1.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/speakermodel2.jpg">
                     </div>
                 </div>
-                <div class="row padded-bottom-25">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/Sphere Speaker.jpg">
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-eighth-landscape">
-                        </div>
-                        <div class="filler-eighth-landscape">
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-fourth-portrait">
-                        </div>
-                    </div>
-                </div>            
+                </div>             
             </div>
         </div>
     </div>
@@ -137,23 +142,21 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
+                        <span class="font-gray"><h3>A collection of recent projects from school, work, and personal passions.</h3></span>
                     </div>
                 </div>
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="loungechair.html"><div class="work-image2">
-                        </div></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
+                        <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
+                        <input type="button" value="Guitar Case | 2011" class="btn btn-new" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div>
                 </div>  
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="shoes.html"><div class="work-image2">
-                        </div></a>
-                        <input type="button" value="Dress Shoe | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
+                        <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
+                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div>
@@ -166,7 +169,7 @@
     <div class="outer-fit bg-blue" id="Contact">
         <div class="inner-fit-contact philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom">
+                <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-white">
                         <h1>Contact</h1>
                         <div class="outer-line-top">  
@@ -201,21 +204,12 @@
                         </div>
                     </div>
                 </form> -->
-                <div class="row">
-                    <div class="col-md-offset-4 col-md-4">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
+                <div class="row padded-bottom">
+                    <div class="col-md-offset-3 col-md-6">
+                        <h3><span class="font-light">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
                     </div>
                 </div>       
-            </div>
-            <div class="container">    
-                <div class="row bottom">
-                    <div class="col-md-12 font-gray right">
-                        <p>&copy Brandon Williams 2014</p>
-                    </div> 
-                </div>
-            </div>    
+            </div>   
         </div>
     </div> 
 
