--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <li>
                         <a href="#Philosophy">PHILOSOPHY</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#Process">PROCESS</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="#Work">WORK</a>
                     </li>
@@ -70,7 +70,7 @@
     </div>
     
     <!-- Philosophy -->
-    <div class="outer-fit bg-gray" id="Philosophy">
+    <div class="outer-fit bg-white" id="Philosophy">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <!-- Process -->
+    <!-- Process
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Work -->
     <div class="outer-fit bg-gray" id="Work">
@@ -195,31 +195,28 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
+                        <span class="font-gray"><h3>A collection of recent projects from school, work, and personal passions.</h3></span>
                     </div>
                 </div> 
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="loungechair.html"><div class="work-image1">
-                        </div></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
+                        <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
+                        <input type="button" value="Guitar Case | 2011" class="btn btn-new" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
                 </div>
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="shoes.html"><div class="work-image2">
-                        </div></a>
-                        <input type="button" value="Dress Shoe | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
+                        <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
+                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
-                    </div>
-                </div>  
+                    </div> 
+                </div> 
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="speaker.html"><div class="work-image3">
-                        </div></a>
+                        <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
                         <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
@@ -268,23 +265,14 @@
                         </div>
                     </div>
                 </form> -->
-                <div class="row">
-                    <div class="col-md-offset-4 col-md-4">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
+                <div class="row padded-bottom">
+                    <div class="col-md-offset-3 col-md-6">
+                        <h3><span class="font-light">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
                     </div>
                 </div>       
-            </div>
-            <div class="container">    
-                <div class="row bottom">
-                    <div class="col-md-12 font-gray right">
-                        <p>&copy Brandon Williams 2014</p>
-                    </div> 
-                </div>
-            </div>    
+            </div>   
         </div>
-    </div>    
+    </div>   
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
