--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>Being a mechanical engineer and designer, I am passionate about not only designing beautifully functional products, but also bringing them to life. I pair a technical background in manufacturing with a love of industrial design and beautifully crafted products.</h3></span>
+                        <span class="font-gray"><h3>Being a mechanical engineer and designer, I am passionate about not only designing beautifully functional products, but also bringing them to life. I pair a technical background in manufacturing with a love of industrial design and beautifully crafted products to bring my ideas to life.</h3></span>
                     </div>
                 </div>  
             </div>
