--- a/starbucks.html
+++ b/starbucks.html
@@ -38,16 +38,16 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav navbar-right" id="topnav">
                     <li>
-                        <a href="create.html">New Group</a>
+                        <a href="#">New Group</a>
                     </li>
                     <!-- <li>
                         <a href="#Process">PROCESS</a>
                     </li> -->
                     <li>
-                        <a href="previous.html">Previous Group</a>
+                        <a href="#previous">Previous Group</a>
                     </li>
                     <li>
-                        <a href="nearby.html">Starbucks Near Me</a>
+                        <a data-toggle="modal" data-target="#contact-modal">Starbucks Near Me</a>
                     </li>
                 </ul>
             </nav>
