--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/theme.css">
+        <link rel="stylesheet" href="css/structure.css">
+        <link rel="stylesheet" href="css/form.css">
         <link rel="stylesheet" href="css/brandonkwilliams.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -82,7 +85,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>As a mechanical engineer and designer, I am passionate not only about designing beautifully functional products, but also bringing them to life. I pair a technical background in manufacturing with a love of industrial design to create products that _____________.</h3></span>
+                        <span class="font-gray"><h3>As a mechanical engineer and designer, I am passionate not only about designing beautifully functional products, but also bringing them to life. I pair a technical background in manufacturing with a love of industrial design to create products that stand out both functionally and aesthetically.</h3></span>
                     </div>
                 </div>  
             </div>
@@ -190,7 +193,7 @@
     </div> -->
 
     <!-- Work -->
-    <div class="outer-fit bg-gray" id="Work">
+    <div class="outer-fit bg-white" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
@@ -249,40 +252,57 @@
                         <span class="font-white"><h3>I love what I do. Feel free to send me an email or give me a call if you'd like to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
-                <!-- <form role="form">
-                    <div class="row padded-bottom">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input class="form-control" id="name" type="text" placeholder="Full Name">
-                        </div>
-                    </div>
-                    </div>
-                    
-                    <div class="row">
-                    <div class="form-group">
-                        <div class="col-md-12 padded-bottom">
-                            <input class="form-control" id="email" type="email" placeholder="Email">
-                        </div>
-                    </div>
-                    </div>
-                    
-                    <div class="row">
-                    <div class="form-group">
-                        <div class="col-md-12 padded-bottom">
-                            <textarea rows="10"class="form-control"
-                            placeholder="Message" id="message"></textarea>
-                        </div>
-                    </div>
-                    </div>
+<!--
+                <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate
+      action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
+  
+                    <ul>
 
-                    <div class="row padded-bottom-25">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <button type="submit" name="submit" class="btn btn-new">Send</button>
-                        </div>
+                    <li id="foli211" class="notranslate namebox     ">
+                    <label class="desc" id="title211" for="Field211">
+                    </label>
+                    <div>
+                    <input id="Field211" name="Field211" type="text" class="field text medium" value="Your Name" maxlength="255" tabindex="1" onkeyup="" />
                     </div>
+                    </li><li id="foli208" class="notranslate emailbox     ">
+                    <label class="desc" id="title208" for="Field208">
+                    </label>
+                    <div>
+                    <input id="Field208" name="Field208" type="email" spellcheck="false" class="field text medium" value="Your Email" maxlength="255" tabindex="2" /> 
                     </div>
-                </form> -->
+                    </li>
+                    <li id="foli3" 
+                    class="notranslate messagebox     "><label class="desc" id="title3" for="Field3">
+
+                    </label>
+
+                    <div>
+                    <textarea id="Field3" 
+                    name="Field3" 
+                    class="field textarea medium" 
+                    spellcheck="true" 
+                    rows="10" cols="50" 
+                    tabindex="3" 
+                    onkeyup=""
+                     >Your Message</textarea>
+
+                    </div>
+                    </li> <li class="buttons ">
+                    <div>
+
+                                        <input id="saveForm" name="saveForm" class="btn btn-new submit" 
+                        type="submit" value="Submit"
+                     /></div>
+                    </li>
+
+                    <li class="hide">
+                    <label for="comment">Do Not Fill This Out</label>
+                    <textarea name="comment" id="comment" rows="1" cols="1"></textarea>
+                    <input type="hidden" id="idstamp" name="idstamp" value="YXGS2kn7yOgPn3GTKEtaSen8y6F8AOW7tKAy0ZKn/1Y=" />
+                    </li>
+                    </ul>
+                </form> 
+
                 <div class="row">
                     <div class="col-md-offset-2 col-md-8">
                         <h3><span class="font-light">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
@@ -291,6 +311,8 @@
             </div>   
         </div>
     </div>   
+
+    -->
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
