--- a/loungechair.html
+++ b/loungechair.html
@@ -188,8 +188,8 @@
     </div>
 
     <!-- Contact -->
-    <div class="outer-fit bg-blue" id="Contact">
-        <div class="inner-fit-contact philosophy-image top center">
+    <div class="outer-full-page bg-green" id="Contact">
+        <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-white">
