--- a/loungechair.html
+++ b/loungechair.html
@@ -200,7 +200,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love it too send me a note or give me a call. Feedback and questions are also much appreciated.</h3></span>
+                        <span class="font-white"><h3>I love what I do. Feel free to send me an email or give me a call if you'd like to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
                 <!-- <form role="form">
